# 14_yamr

./: .travis.yml  CMakeLists.txt  main.cpp  readme.md
include/: block_reader.h  map_function.h  mapper.h  reduce_function.h  reducer.h  threaded_converter.h
